# learn

./: README.md
algos/bloomfilter/: README.md  setup.py
algos/bloomfilter/bloomfilter/: bloomfilter.py
algos/bloomfilter/tests/: test_bloomfilter.py
clrs/: CMakeLists.txt  README.md  main.cpp
clrs/src/include/ch2/: insort.h
clrs/src/lib/ch2/: insort.cpp
net/nagle/: Dockerfile  README.md  client.py  docker-compose.yml
net/tcp-slow-start/: README.md  client.py  docker-compose.yml  server.sh
os/files/: CMakeLists.txt
os/files/src/: main.cpp
os/signals/: CMakeLists.txt
os/signals/src/: main.cpp
os/synchr/: CMakeLists.txt  Makefile  README.md  analyze.py  condvar.cpp  futex_mutex.cpp  main.cpp
pearls/: CMakeLists.txt
pearls/designs/ch1/: ex10.md  ex5.md  ex7.md  ex8.md  ex9.md
pearls/pearls/: Bitvector.cpp  Bitvector.h  CMakeLists.txt  NumbersGenerator.cpp  NumbersGenerator.h  anagrams.cpp  anagrams.h  bitops.cpp  bitops.h  bitvector_sort.cpp  bitvector_sort.h  endianness.cpp  endianness.h  missing_number.cpp  missing_number.h  vector_shift.cpp  vector_shift.h
pearls/tests/: CMakeLists.txt
pearls/tests/ch1/: CMakeLists.txt  test_endianness.cpp  test_ex1.cpp  test_ex2.cpp  test_ex2.cpp.cpp  test_ex3.cpp  test_ex4.cpp  test_ex6.cpp
pearls/tests/ch2/: CMakeLists.txt  test_anagrams.cpp  test_missing_number.cpp  test_shift.cpp
python/: aio.py  asio.py  coroutines.py  twst.py  utf8.py
software/nginx/: learn.nginx  rewrite.nginx
